MDEV-37230 Incorrect handling of NULL join conditions when using split-materialized

During the optimization phase, when determining whether or not to materialize
a derived table all at once or in groups (split materialization), all key
equalities that reference the derived table have their cond Items pushed into
JOIN::spl_opt_info->inj_cond_list.
From there they are filtered (tables in join prefix) and injected into the
JOIN conditions (in JOIN::inject_best_splitting_cond()), where they might
be removed because they are involved ref access and they aren't needed.
These pushed items conditions were always Item_func_eq, whether or or
the key usage specifies null safe equality (<=>) or not.

The fix is to create an Item_func_equal condition when the key equality
is specified using <=>.

approved by Sergei Petrunia (sergey@mariadb.com) PR#4198